--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,29 +1,100 @@
-server {
-  listen   443 ssl;
-  server_name fb-proxy.test;
-  
-  access_log /var/log/nginx/reverse-access.log;
-  error_log /var/log/nginx/reverse-error.log;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
-
-  location / {
-    auth_request /auth;
-    ssl_certificate     /etc/ssl/private/fb-proxy.test.crt
-    ssl_certificate_key /etc/ssl/private/fb-proxy.test.key;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:MozSSL:10m; 
-    ssl_session_tickets off;
-
-    auth_request_set $user $upstream_http_x_forwarded_user;
-    proxy_set_header X-Forwarded-User $user;
-    proxy_pass http://mockApi;
-  }
-
-  location /auth {
-    internal;
-    proxy_set_header Host $host;
-    proxy_pass_request_body off;
-    proxy_set_header Content-Length "";
-    proxy_pass http://authArv;
-  }
+events {
+        worker_connections 768;
+        # multi_accept on;
 }
+
+http {
+
+        ##
+        # Basic Settings
+        ##
+
+        sendfile on;
+        tcp_nopush on;
+        tcp_nodelay on;
+        keepalive_timeout 65;
+        types_hash_max_size 2048;
+        # server_tokens off;
+
+        # server_names_hash_bucket_size 64;
+        # server_name_in_redirect off;
+
+        #include /etc/nginx/mime.types;
+        default_type application/octet-stream;
+
+        ##
+        # SSL Settings
+        ##
+
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+        ssl_prefer_server_ciphers on;
+
+        ##
+        # Logging Settings
+        ##
+
+        #access_log /var/log/nginx/access.log;
+        #error_log /var/log/nginx/error.log;
+
+        ##
+        # Gzip Settings
+        ##
+
+        gzip on;
+
+        # gzip_vary on;
+        # gzip_proxied any;
+        # gzip_comp_level 6;
+        # gzip_buffers 16 8k;
+        # gzip_http_version 1.1;
+        # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+        ##
+        # Virtual Host Configs
+        ##
+
+        #include /etc/nginx/conf.d/*.conf;
+        #include /etc/nginx/sites-enabled/*;
+
+	upstream authSrv {
+    	server authSrv:7000;
+  	}
+
+        server {
+	  listen   443 ssl;
+  	  server_name fb-proxy.test;
+
+  	  ssl_certificate     /etc/ssl/private/fb-proxy.test.crt;
+	  ssl_certificate_key /etc/ssl/private/fb-proxy.test.key;
+
+	  access_log /var/log/nginx/reverse-access.log;
+	  error_log /var/log/nginx/reverse-error.log;
+
+
+
+	  location / {
+	    auth_request /auth;
+    	    #ssl_session_timeout 1d;
+	    #ssl_session_cache shared:MozSSL:10m;
+	    #ssl_session_tickets off;
+
+	    auth_request_set $user $upstream_http_x_forwarded_user;
+	    proxy_set_header X-Forwarded-User $user;
+    	    proxy_pass http://mockApi.test:8000;
+ 	    }	
+
+  	  location /auth {
+    	    internal;
+	    proxy_set_header Host $host;
+	    proxy_pass_request_body off;
+	    proxy_set_header Content-Length "";
+	    proxy_pass http://authSrv;
+	  }
+	}
+
+}        
